# helium

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meson.build
editors/vim/: README.md
editors/vim/ftdetect/: helium.vim
editors/vim/syntax/: helium.vim
meta/: environment.sh
meta/cross/: aarch64-macos.ini  setup-aarch64-macos.sh  zcc-aarch64-macos  zxx-aarch64-macos
playground/: README.md
samples/: enum.he  fib.he  global.he  hello-world.he  inline-c.he  meson.build  struct.he  union.he  variant.he  watchf.he  website.he
samples/multi-source/: HelloWorld.he  main.he  meson.build
src/: SourceFile.h  main.cpp  meson.build
src/He/: Codegen.cpp  Codegen.h  Context.h  Expression.cpp  Expression.h  Lexer.cpp  Parser.cpp  Token.cpp  Token.h  Typecheck.cpp
src/bootstrap/: FileBuffer.h  SourceFile.h  Util.h  main.cpp  meson.build
src/bootstrap/Arch/: Syscall.h  Time.h  meson.build
src/bootstrap/Arch/aarch64/: Syscall.h  Time.h
src/bootstrap/Arch/x86_64/: Syscall.h  Time.h
src/bootstrap/CLI/: ArgumentParser.cpp  ArgumentParser.h  meson.build
src/bootstrap/Core/: Bench.h  DenseMap.cpp  DenseMap.h  Error.cpp  Error.h  ErrorOr.h  File.cpp  File.h  GenericVector.cpp  GenericVector.h  Hardware.h  MappedFile.cpp  MappedFile.h  Print.h  StringBuffer.h  Syscall.h  System.cpp  System.h  Threads.h  Vector.h  meson.build
src/bootstrap/He/: Codegen.cpp  Codegen.h  Context.h  Expression.cpp  Expression.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SourceFile.h  Token.cpp  Token.h  Typecheck.cpp  Typecheck.h  TypecheckedExpression.cpp  TypecheckedExpression.h  Util.h  meson.build
src/bootstrap/Main/: Main.cpp  Main.h  meson.build
src/bootstrap/Mem/: AddressSpace.cpp  AddressSpace.h  Locality.h  NullablePtr.h  Sizes.h  meson.build
src/bootstrap/Ty/: Array.h  Base.h  Concepts.h  Defer.h  Error.cpp  Error.h  ErrorOr.h  FormatCounter.h  Formatter.h  Forward.h  Function.h  Hardware.h  IOVec.h  Id.h  Memory.cpp  Memory.h  Move.h  New.h  Optional.h  ReverseIterator.h  SmallCapture.h  SmallMap.h  SmallVector.h  StaticVector.h  StringBuffer.h  StringView.cpp  StringView.h  Threads.h  Traits.h  Try.h  Vector.h  View.h  meson.build
src/selfhost/: Lexer.h  Lexer.he  SourceFile.h  SourceFile.he  Token.h  Token.he  main.he  meson.build
src/selfhost/Ty/: Base.h  Error.cpp  Error.h  StringView.h  Try.h  View.h  meson.build
subprojects/Core/: meson.build
subprojects/Core/CLI/: ArgumentParser.cpp  ArgumentParser.h
subprojects/Core/Core/: DenseMap.cpp  DenseMap.h  Error.cpp  Error.h  ErrorOr.h  File.cpp  File.h  GenericVector.cpp  GenericVector.h  MappedFile.cpp  MappedFile.h  StringBuffer.h  System.cpp  System.h  Threads.h  Vector.cpp  Vector.h
subprojects/Core/Mem/: AddressSpace.cpp  AddressSpace.h  NullablePtr.h
subprojects/Types/: Types.h
